# KillSwitchHelper

./: CMakeLists.txt  COPYING  PostInstall.cmake  README.md  cmake_uninstall.cmake.in
data/: KillSwitchHelper.desktop  KillSwitchHelper:KillSwitchHelper.desktop  killswitchhelper.execute.iproute.policy
data/KillSwitchHelper/: KillSwitchHelper.glade
src/: KillSwitchHelper.vala  killswitchhelperhelper.vala
src/Widgets/: KillSwitchHelperMainWindow.vala
